--- a/source/_patterns/30-organisms/masthead/masthead.scss
+++ b/source/_patterns/30-organisms/masthead/masthead.scss
@@ -91,8 +91,12 @@
 }
 
 .masthead__button-wrapper {
-  margin-right: -16px;
   font-size: 0; // removes space between inline-block child elements
+  margin-right: -16px;
+
+  @include desktop-up {
+    margin-right: 0;
+  }
 }
 
 .masthead__button {
